Fixed background image being shown in search box on Firefox OS

--- a/_assets/stylesheets/_layout.scss
+++ b/_assets/stylesheets/_layout.scss
@@ -90,6 +90,7 @@ form#site-wide-search {
     -moz-border-radius: 2px;
     -webkit-border-radius: 2px;
     background-color: #262626;
+    background-image: none;
     color: white;
     outline: none;
 
